Closed
Bug 1403759
Opened 5 years ago
Closed 5 years ago
[macOS] Backspace key should remove composing Hangul character rather than committing it
Categories
(Core :: Widget: Cocoa, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla59
Tracking | Status | |
---|---|---|
firefox59 | --- | fixed |
People
(Reporter: chanil1218, Assigned: masayuki)
References
Details
(Keywords: inputmethod)
Attachments
(3 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:57.0) Gecko/20100101 Firefox/57.0 Build ID: 20170925150345 Steps to reproduce: * Cmd+L to locate search field * Enter Korean character(ㄱ) * Click delete Actual results: Instead of delete chacter quickly, just remove focus. Expected results: Delete focused character.
Assignee | ||
Comment 2•5 years ago
|
||
Perhaps, yes. But I'm not sure about "just remove focus" since I don't see any reaction when I press delete key in URL bar.
Flags: needinfo?(masayuki)
Reporter | ||
Comment 3•5 years ago
|
||
I mean "just remove focus" is that underline shown below "ㄱ" disappeared instead of removing "ㄱ". I'm using Mac FYI.
Assignee | ||
Comment 4•5 years ago
|
||
Thanks. Do you still reproduce this bug with Beta 57 b5 or Nightly?
Flags: needinfo?(chanil1218)
Reporter | ||
Comment 5•5 years ago
|
||
I pressed delete button firstly and later pressed delete button again. I tested this on 57.0b6 In Chrome deletion happens in single delete press.
Flags: needinfo?(chanil1218)
Assignee | ||
Comment 7•5 years ago
|
||
Please keep waiting. I'm working on some regression bugs related to nsINode::GetChildAt(). I'll be back here when I get a chance.
Assignee | ||
Updated•5 years ago
|
OS: Unspecified → Mac OS X
Hardware: Unspecified → All
Summary: Korean deletion delay → [macOS] Backspace key should remove composing Hangul character rather than committing it
Assignee | ||
Updated•5 years ago
|
Component: Address Bar → Widget: Cocoa
Flags: needinfo?(masayuki)
Keywords: inputmethod
Product: Firefox → Core
Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(masayuki)
![]() |
||
Updated•5 years ago
|
Priority: -- → P3
Assignee | ||
Comment 9•5 years ago
|
||
This is another case of bug 1358958. Korean IME started to commit composition and send deleteBackward command when user presses Backspace key during composition.
Assignee: nobody → masayuki
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(masayuki)
See Also: → 1358958
Assignee | ||
Comment 10•5 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=7f73f4a28c08cb3fcc2f74e257d6564d7efd5553
Assignee | ||
Comment 11•5 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=fece34586dec7ac4f24202572f890c7b029161ef
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Assignee | ||
Comment 14•5 years ago
|
||
While composing Korean IME, other control keys like arrow keys causes committing composing Hangul character and should work as usual. However, on Gecko, they cause only committing composing Hangul character because Gecko ignores following commands came from Korean IME. So, the patches make ChildView and TextInputHandler handle such commands as usual. Note that, there are some other commands which are not included in the patches, but our editor doesn't support the commands even with different key combination. So, the commands included in the patches are enough for current implementation.
Comment 15•5 years ago
|
||
mozreview-review |
Comment on attachment 8934056 [details] Bug 1403759 - part 1: Make TextInputHandler::InsertNewline() treat other commands https://reviewboard.mozilla.org/r/204796/#review210832
Attachment #8934056 -
Flags: review?(m_kato) → review+
Comment 16•5 years ago
|
||
mozreview-review |
Comment on attachment 8934057 [details] Bug 1403759 - part 2: Handle edit/selection commands like insertNewline: in TextInputHandler::HandleCommand() https://reviewboard.mozilla.org/r/204798/#review210844
Attachment #8934057 -
Flags: review?(m_kato) → review+
Comment 17•5 years ago
|
||
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/f5039cf4ead7 part 1: Make TextInputHandler::InsertNewline() treat other commands r=m_kato https://hg.mozilla.org/integration/autoland/rev/afc17c7465c2 part 2: Handle edit/selection commands like insertNewline: in TextInputHandler::HandleCommand() r=m_kato
Comment 18•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/f5039cf4ead7 https://hg.mozilla.org/mozilla-central/rev/afc17c7465c2
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox59:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in
before you can comment on or make changes to this bug.
Description
•